###########################################################################
#
# Project: Simple Hybesis Algorithm Logger
#
# Copyright (c) Michael Jeulin-Lagarrigue.
# All rights reserved.
#
# Author: Michael Jeulin-Lagarrigue.
#
###########################################################################

SET(MODULES_DIR ${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(Combinatory)
add_subdirectory(Search)
add_subdirectory(Sort)
add_subdirectory(DataStructures)
